# svelte_axum

./: justfile
backend/: Cargo.toml  api.http
backend/src/: app_tracing.rs  lib.rs  main.rs  report_error.rs
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: app.html
frontend/src/routes/: +page.svelte  +page.ts
